--- a/.github/workflows/cd-aspnetcore-mvc.yml
+++ b/.github/workflows/cd-aspnetcore-mvc.yml
@@ -14,14 +14,13 @@ jobs:
       uses: actions/checkout@v5
     - name: Extract VERSION
       run: echo "VERSION=${GITHUB_REF/refs\/tags\/aspnetcore-mvc-v/}" >> $GITHUB_ENV
-    - name: Setup .NET 8.0 SDK
+    - name: Setup .NET SDKs
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: '8.0.x'
-    - name: Setup .NET 9.0 SDK
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '9.0.x'
+        dotnet-version: |
+            '8.0.x'
+            '9.0.x'
+            '10.0.x'
     - name: Restore
       run: dotnet restore
     - name: Build
