--- a/src/Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson/Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson.csproj
+++ b/src/Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson/Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson.csproj
@@ -3,7 +3,7 @@
     <Description>Ndjson.AsyncStreams.AspNetCore.Mvc is a solution for working with asynchronous streaming data sources in ASP.NET Core MVC using NDJSON (Newline Delimited JSON). This implementation is based on Newtonsoft Json.NET serializer.</Description>
     <VersionPrefix>1.4.1</VersionPrefix>
     <VersionSuffix></VersionSuffix>
-    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net8.0;net9.0;net10.0</TargetFrameworks>
     <AssemblyTitle>Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson</AssemblyTitle>
     <AssemblyName>Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson</AssemblyName>
     <PackageId>Ndjson.AsyncStreams.AspNetCore.Mvc.NewtonsoftJson</PackageId>
@@ -14,14 +14,21 @@
   </ItemGroup>
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.0" />
+  <ItemGroup Condition="'$(TargetFramework)' == 'net9.0'">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.0" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net10.0'">
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Ndjson.AsyncStreams.AspNetCore.Mvc\Ndjson.AsyncStreams.AspNetCore.Mvc.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
   </ItemGroup>
 </Project>
