--- a/src/Ndjson.AsyncStreams.AspNetCore.Mvc/Ndjson.AsyncStreams.AspNetCore.Mvc.csproj
+++ b/src/Ndjson.AsyncStreams.AspNetCore.Mvc/Ndjson.AsyncStreams.AspNetCore.Mvc.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Ndjson.AsyncStreams.AspNetCore.Mvc is a solution for working with asynchronous streaming data sources in ASP.NET Core MVC using NDJSON (Newline Delimited JSON).</Description>
     <VersionPrefix>1.4.1</VersionPrefix>
     <VersionSuffix></VersionSuffix>
-    <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1;net8.0;net9.0;net10.0</TargetFrameworks>
     <AssemblyTitle>Ndjson.AsyncStreams.AspNetCore.Mvc</AssemblyTitle>
     <AssemblyName>Ndjson.AsyncStreams.AspNetCore.Mvc</AssemblyName>
     <PackageId>Ndjson.AsyncStreams.AspNetCore.Mvc</PackageId>
@@ -11,5 +11,8 @@
   </PropertyGroup>
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
   </ItemGroup>
 </Project>
