--- a/src/Ndjson.AsyncStreams.Net.Http/Ndjson.AsyncStreams.Net.Http.csproj
+++ b/src/Ndjson.AsyncStreams.Net.Http/Ndjson.AsyncStreams.Net.Http.csproj
@@ -1,12 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>Ndjson.AsyncStreams.Net.Http is a solution for working with asynchronous streaming data sources in HttpClient using NDJSON (Newline Delimited JSON).</Description>
     <VersionPrefix>2.1.0</VersionPrefix>
     <VersionSuffix></VersionSuffix>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0;net10.0</TargetFrameworks>
     <AssemblyTitle>Ndjson.AsyncStreams.Net.Http</AssemblyTitle>
     <AssemblyName>Ndjson.AsyncStreams.Net.Http</AssemblyName>
     <PackageId>Ndjson.AsyncStreams.Net.Http</PackageId>
     <PackageTags>ndjson;ndjsonstream;asyncstreams,httpclient</PackageTags>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Update="DotNet.ReproducibleBuilds" Version="1.2.39" />
+  </ItemGroup>
 </Project>
