--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,14 +12,13 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v5
-    - name: Setup .NET 8.0 SDK
+    - name: Setup .NET SDKs
       uses: actions/setup-dotnet@v5
       with:
-        dotnet-version: '8.0.x'
-    - name: Setup .NET 9.0 SDK
-      uses: actions/setup-dotnet@v5
-      with:
-        dotnet-version: '9.0.x'
+        dotnet-version: |
+            8.0.x
+            9.0.x
+            10.0.x
     - name: Setup docfx
       run: dotnet tool update -g docfx
     - name: Restore .NET Projects
